fixed alignment

--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -3,16 +3,22 @@
     display: flex;
     width:100vw;
     height:7vh;
+}
+
+.container_right{
+    background-color: green;
+    display: flex;
+    width:100vw;
+    height:7vh;
     justify-content:right;
 }
 
 .container a{
     background-color: blue;
-    width: 10vw;
+    display: flex;
+    justify-content: center;
+    padding:0 1em 0 1em;
     align-items: center;
-    /*line-height: 6vh;*/
-    text-align: center;
-    /*font-size: 1em;*/
 }
 
 .container a:hover{
